--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/ef53897d55.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap 4: Mizuxe Book Theme</title>
@@ -116,6 +117,77 @@
                             <h3>Be Stronger</h3>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, atque!</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!--ABOUT / WHY SECTION-->
+    <section id="about" class="py-5 text-center bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="info-header mb-5">
+                        <h1 class="text-primary pb-3">
+                            Why this Book
+                        </h1>
+                        <p class="lead-pb-3">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam ut cum cupiditate doloremque eos magni.
+                        </p>
+                    </div>
+
+                    <!--ACCORDION-->
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+                                        <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                                    </div>
+                                </h5>
+                            </div>
+
+                            <div id="collapse1" class="collapse show">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam incidunt. Praesentium, mollitia!
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                                        <i class="fas fa-arrow-circle-down"></i> Gain The Knowledge
+                                    </div>
+                                </h5>
+                            </div>
+
+                            <div id="collapse2" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam incidunt. Praesentium, mollitia!
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse3" data-toggle="collapse" data-parent="#accordion">
+                                        <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                                    </div>
+                                </h5>
+                            </div> 
+
+                            <div id="collapse3" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam incidunt. Praesentium, mollitia!
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
