--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     <div class="card text-center border-primary mb-resp">
                         <div class="card-body">
                             <h3 class="text-primary">Be Better</h3>
-                            <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, atque!</p>
+                            <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, atque!
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -107,7 +108,8 @@
                     <div class="card text-center border-primary mb-resp">
                         <div class="card-body">
                             <h3 class="text-primary">Be Faster</h3>
-                            <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, atque!</p>
+                            <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, atque!
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -134,7 +136,8 @@
                             Why this Book
                         </h1>
                         <p class="lead-pb-3">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam ut cum cupiditate doloremque eos magni.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam ut cum cupiditate doloremque
+                            eos magni.
                         </p>
                     </div>
 
@@ -151,7 +154,11 @@
 
                             <div id="collapse1" class="collapse show">
                                 <div class="card-body">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam incidunt. Praesentium, mollitia!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea
+                                    cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in
+                                    beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate
+                                    commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam
+                                    incidunt. Praesentium, mollitia!
                                 </div>
                             </div>
                         </div>
@@ -167,7 +174,11 @@
 
                             <div id="collapse2" class="collapse">
                                 <div class="card-body">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam incidunt. Praesentium, mollitia!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea
+                                    cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in
+                                    beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate
+                                    commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam
+                                    incidunt. Praesentium, mollitia!
                                 </div>
                             </div>
                         </div>
@@ -179,15 +190,134 @@
                                         <i class="fas fa-arrow-circle-down"></i> Open Your Mind
                                     </div>
                                 </h5>
-                            </div> 
+                            </div>
 
                             <div id="collapse3" class="collapse">
                                 <div class="card-body">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam incidunt. Praesentium, mollitia!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse unde eveniet ea
+                                    cupiditate at eius fuga ducimus odit architecto, alias dolorum, eos voluptates a in
+                                    beatae quae nemo est praesentium dolor tenetur expedita ex suscipit voluptate
+                                    commodi? Voluptatem ratione harum vero natus obcaecati blanditiis doloribus a totam
+                                    incidunt. Praesentium, mollitia!
                                 </div>
                             </div>
                         </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!--AUTHORS-->
+    <section id="authors" class="my-5 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="info-header mb-5">
+                        <h1 class="text-primary pb-3">
+                            Meet The Authors
+                        </h1>
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit animi laudantium,
+                            aspernatur ab vitae in.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>Susan Williams</h3>
+                            <h5 class="text-muted">Lead Writer</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem et, aspernatur dolores
+                                commodi ratione facilis?</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="http://facebook.com"><i class="fab fa-facebook"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://instagram.com"><i class="fab fa-instagram"></i></a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>Grace Smith</h3>
+                            <h5 class="text-muted">Co-Writer</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem et, aspernatur dolores
+                                commodi ratione facilis?</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="http://facebook.com"><i class="fab fa-facebook"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://instagram.com"><i class="fab fa-instagram"></i></a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>John Neilson</h3>
+                            <h5 class="text-muted">Editor</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem et, aspernatur dolores
+                                commodi ratione facilis?</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="http://facebook.com"><i class="fab fa-facebook"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://instagram.com"><i class="fab fa-instagram"></i></a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>Kevin Swain</h3>
+                            <h5 class="text-muted">Designer</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem et, aspernatur dolores
+                                commodi ratione facilis?</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="http://facebook.com"><i class="fab fa-facebook"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="http://instagram.com"><i class="fab fa-instagram"></i></a>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
